fix(search): double scrollbars

--- a/apps/client/src/widgets/search_result.css
+++ b/apps/client/src/widgets/search_result.css
@@ -1,8 +1,6 @@
 .search-result-widget {
     flex-grow: 100000;
     flex-shrink: 100000;
-    height: 100%;
-    overflow: auto;
     contain: none !important;
 }
 
